[package]
name = "merge-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bat = "0.22.1"
clap = { version = "3.2.22", features = ["derive"] }
glob = "0.3.0"
indoc = "1.0.7"
semver = "1.0.14"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
time = { version = "0.3.14", features = ["std", "formatting"] }
toml_edit = "0.14.4"
